 Version 0.40
 ============

 Released on 

 New features and improvements:

   - display application version (todo #6).
   - AccountsChart: open Settlement and Reconciliation page (todo #813).
   - ImportAssistant: recall the loaded file on top of the pages (todo #836).
   - Restore: close the current dossier if any (todo #807).
   - RateProperties: let the user reorder the lines (todo #187).

 Bug fixes:

   - DossierManager to DossierOpen: keep the current selection (todo #828).
   - OpeTemplates: fix load order of detail rows.

 Other changes:

   - Upgrade to Gtk+ 3.16.
   - Upgrade to Fedora 22 build chain.
   - Upgrade DBMS to v26.
   - ofaAccountsBook class: renamed to ofaAccountsChart (todo #816).
   - ofaLedgerClose: have a 'All ledgers' button (todo #815).
   - Printings: optimize dataset load.
   - Settings: have a dossier.conf special development (todo #820).
   - BatProperties: make the entries be read-only (todo #829).
   - DossierStore: is an auto-maintained singleton (todo #832).
   - my_utils_container_attach_from_ui(): new function.
   - my_utils_widget_set_editable(): new function.
   - my_utils_widget_set_style(): new function.
   - my_utils_widget_set_margin(): new function.
   - my_utils_widget_set_margin_left(): new function.
   - my_utils_widget_set_margin_right(): new function.
   - my_utils_widget_set_xalign(): new function.
   - ofo_bat_get_account(): new method.
   - ofo_bat_set_account(): new method.
   - ofo_dossier_get_last_closing_date(): new method.
   - ofo_dossier_set_last_closing_date(): new method.
   - ofo_dossier_get_prev_exe_last_entry(): new method.
   - ofo_dossier_set_prev_exe_last_entry(): new method.
   - ofa_application_get_copyright(): new method.
   - ofa_dossier_treeview_add_row(): removed method.
   - ofa_dossier_store_add_row(): removed method.
   - ofa_dossier_store_reload(): new method.
   - ofa_exercice_combo_set_selected(): new method.
   - ofa_irenderable_free_dataset(): removed interface method.