@@ -91,7 +91,6 @@ static void     on_connect_infos_changed( ofaIDbms *instance, void *infos, ofaDo
 static void     on_dbms_credentials_changed( ofaDBMSRootBin *bin, const gchar *account, const gchar *password, ofaDossierNewBin *self );
 static void     check_for_enable_dlg( ofaDossierNewBin *bin );
 static void     set_message( const ofaDossierNewBin *bin, const gchar *msg );
-static void     update_dossier_store( const ofaDossierNewBin *bin );
 
 static void
 dossier_new_bin_finalize( GObject *instance )
@@ -565,7 +564,7 @@ ofa_dossier_new_bin_apply( const ofaDossierNewBin *bin )
 	if( !priv->dispose_has_run ){
 
 		if( ofa_idbms_connect_enter_apply( priv->prov_module, priv->dname, priv->infos )){
-			update_dossier_store( bin );
+			ofa_dossier_store_reload();
 			ok = TRUE;
 		}
 
@@ -649,14 +648,4 @@ set_message( const ofaDossierNewBin *bin, const gchar *msg )
 		gtk_label_set_text( GTK_LABEL( priv->msg_label ), msg );
 		my_utils_widget_set_style( priv->msg_label, "labelerror" );
 	}
-}
-
-static void
-update_dossier_store( const ofaDossierNewBin *bin )
-{
-	ofaDossierStore *store;
-
-	store = ofa_dossier_store_new();
-	ofa_dossier_store_reload( store );
-	g_object_unref( store );
 }
