@@ -22,6 +22,7 @@
    - AccountsChart: open Settlement and Reconciliation page (todo #813).
    - ImportAssistant: recall the loaded file on top of the pages (todo #836).
    - Restore: close the current dossier if any (todo #807).
+   - RestoreAssistant: remove a newly created dossier on cancel (todo #834).
    - RateProperties: let the user reorder the lines (todo #187).
 
  Bug fixes:
